// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonaCoin renders correctly 1`] = `
<div
  className=
      ms-Persona-coin
      ms-Persona--size48
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
  size={13}
>
  <div
    className=
        ms-Persona-imageArea
        {
          flex: 0 0 auto;
          height: 48px;
          position: relative;
          text-align: center;
          width: 48px;
        }
  >
    <div
      aria-hidden="true"
      className=
          ms-Persona-initials
          {
            background-color: #2D89EF;
            border-radius: 50%;
            color: #ffffff;
            font-size: 17px;
            font-weight: 400;
            height: 48px;
            line-height: 46px;
          }
          @media screen and (-ms-high-contrast: active){& {
            -ms-high-contrast-adjust: none;
            background-color: Window !important;
            border: 1px solid WindowText;
            box-sizing: border-box;
            color: WindowText;
          }
    >
      <i
        aria-hidden={true}
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: inline-block;
              font-family: "FabricMDL2Icons-0";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
        data-icon-name="Contact"
        role="presentation"
      >
        
      </i>
    </div>
  </div>
</div>
`;

exports[`PersonaCoin renders correctly with image 1`] = `
<div
  className=
      ms-Persona-coin
      ms-Persona--size48
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
  size={13}
>
  <div
    className=
        ms-Persona-imageArea
        {
          flex: 0 0 auto;
          height: 48px;
          position: relative;
          text-align: center;
          width: 48px;
        }
  >
    <div
      className=
          ms-Image
          ms-Persona-image
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            border-radius: 50%;
            border: 0px;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            height: 48px;
            left: 0px;
            margin-right: 10px;
            overflow: hidden;
            perspective: 1px;
            position: absolute;
            top: 0px;
            width: 48px;
          }
      style={
        Object {
          "height": 48,
          "width": 48,
        }
      }
    >
      <img
        alt=""
        className=
            ms-Image-image
            ms-Image-image--cover
            ms-Image-image--portrait
            is-notLoaded
            is-fadeIn
            {
              display: block;
              height: auto;
              left: 50% /* @noflip */;
              opacity: 0;
              position: absolute;
              top: 50%;
              transform: translate(-50%,-50%);
              width: 100%;
            }
        onError={[Function]}
        onLoad={[Function]}
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAC0lEQVQImWP4DwQACfsD/eNV8pwAAAAASUVORK5CYII="
      />
    </div>
  </div>
</div>
`;

exports[`PersonaCoin renders correctly with provided initials 1`] = `
<div
  className=
      ms-Persona-coin
      ms-Persona--size48
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
  size={13}
>
  <div
    className=
        ms-Persona-imageArea
        {
          flex: 0 0 auto;
          height: 48px;
          position: relative;
          text-align: center;
          width: 48px;
        }
  >
    <div
      aria-hidden="true"
      className=
          ms-Persona-initials
          {
            background-color: #2D89EF;
            border-radius: 50%;
            color: #ffffff;
            font-size: 17px;
            font-weight: 400;
            height: 48px;
            line-height: 46px;
          }
          @media screen and (-ms-high-contrast: active){& {
            -ms-high-contrast-adjust: none;
            background-color: Window !important;
            border: 1px solid WindowText;
            box-sizing: border-box;
            color: WindowText;
          }
    >
      <span>
        JG
      </span>
    </div>
  </div>
</div>
`;

exports[`PersonaCoin renders correctly with text 1`] = `
<div
  className=
      ms-Persona-coin
      ms-Persona--size48
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
  size={13}
>
  <div
    className=
        ms-Persona-imageArea
        {
          flex: 0 0 auto;
          height: 48px;
          position: relative;
          text-align: center;
          width: 48px;
        }
  >
    <div
      aria-hidden="true"
      className=
          ms-Persona-initials
          {
            background-color: #5E4B8B;
            border-radius: 50%;
            color: #ffffff;
            font-size: 17px;
            font-weight: 400;
            height: 48px;
            line-height: 46px;
          }
          @media screen and (-ms-high-contrast: active){& {
            -ms-high-contrast-adjust: none;
            background-color: Window !important;
            border: 1px solid WindowText;
            box-sizing: border-box;
            color: WindowText;
          }
    >
      <span>
        KL
      </span>
    </div>
  </div>
</div>
`;
